--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Beny | Home</title>
+<title>DrStetsuk | Головна</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -130,12 +130,11 @@
 			<div class="container">
 				<div class="dropdown_inner">
 					<ul class="anchor_nav">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#service">Service</a></li>
-						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#news">News</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#home">Головна</a></li>
+						<li><a href="#about">Про мене</a></li>
+						<li><a href="#suprovid">Супровід</a></li>
+						<li><a href="#service">Курси</a></li>
+						<li><a href="#contact">Написати</a></li>
 					</ul>
 				</div>
 			</div>
@@ -447,8 +446,7 @@
     </div>
 </div>
 <!-- /TELEGRAM-BOT INFO -->
-
-	  
+ 
 	<!-- SERVICES -->
 	<div class="beny_tm_services" id="service">
 		<div class="container">
@@ -509,20 +507,28 @@
 									<div class="main" data-img-url="img/service/2.jpg"></div>
 								</div>
 								<div class="description">
-									<h3>Branding &amp; Design Breakdown In Cinema 4D</h3>
-									<p>Just because we can't get out and about like we normally would, doesn’t mean we have to taking pictures. There’s still plenty you can do, provided you're prepared to use some imagination. Here are a few ideas to keep you shooting until normal life resumes.</p>
-									<p>Most photographers love to shoot the unusual, and you don’t get much more unusual than These Unprecedented Times. Right now everything counts as out of the ordinary. There are a number of remarkable things about these lockdown days that are worth photographing now we can remember them when it is all over.</p>
-									<h3>What Is Branding?</h3>
-									<p>Nullam blandit constituto eam ne, te nam ignota vituper.atoribus. Malis cetero quem saipe, prou thendrerit voluptaria.</p>
+									<h3>Ведення вагітності</h3>
+									<p>Цей онлайн-курс призначений для майбутніх мам та партнерів, щоб підготуватися до вагітності, вивчити всі аспекти та нюанси цього чудового періоду життя.</p>
+    								<h3>Програма курсу включає в себе такі теми:</h3>
 									<div class="in_list">
 										<ul>
-											<li><p>Email is a crucial channel in any marketing.</p></li>
-											<li><p>Curious what to say? How to say it?</p></li>
-											<li><p>Whether you’re kicking off a new ca mpaign.</p></li>
-											<li><p>Habitasse per feugiat aliquam luctus accumsan curae</p></li>
+											<li>Фізіологія вагітності: зміни у тілі жінки під час вагітності, фізична підготовка до пологів.</li>
+											<li>Правильне харчування: раціон для майбутніх матерів, важливість вітамінів та мінералів.</li>
+											<li>Емоційна підтримка: стрес та депресія під час вагітності, способи психологічної підтримки.</li>
+											<li>Акушерські підготовчі курси: підготовка до пологів, участь партнера в процесі.</li>
+											<li>Тривалість курсу: 4 тижні.</li>
 										</ul>
 									</div>
-									<p>Streets empty that are usually busy are remarkable and can evoke the sense of historical pictures from before the invention of the motorcar. Other things that are different at the moment will be queues to get into stores and the lines marked out on the floor to show how far apart we should be.</p>
+									<p>Приєднуйтесь до нашого курсу "Ведення вагітності" та отримуйте всю необхідну інформацію та підтримку від наших кваліфікованих фахівців.</p>
+									<h3>Ціна курсу: 50 євро</h3>
+									<div class="beny_tm_button color">
+										<a href="img/about/1.jpg" download>
+										<span class="wrapper">
+										<span class="first">Купити</span>
+										<span class="second">Купити</span>
+										</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div> 
@@ -539,20 +545,28 @@
 									<div class="main" data-img-url="img/service/3.jpg"></div>
 								</div>
 								<div class="description">
-									<h3>Mobile App Design Breakdown In Cinema 4D</h3>
-									<p>Just because we can't get out and about like we normally would, doesn’t mean we have to taking pictures. There’s still plenty you can do, provided you're prepared to use some imagination. Here are a few ideas to keep you shooting until normal life resumes.</p>
-									<p>Most photographers love to shoot the unusual, and you don’t get much more unusual than These Unprecedented Times. Right now everything counts as out of the ordinary. There are a number of remarkable things about these lockdown days that are worth photographing now we can remember them when it is all over.</p>
-									<h3>What Is Branding?</h3>
-									<p>Nullam blandit constituto eam ne, te nam ignota vituper.atoribus. Malis cetero quem saipe, prou thendrerit voluptaria.</p>
+									<h3>Післяпологовий період та відновлення</h3>
+									<p>Після вагітності важливо дбати про власне здоров'я та швидке відновлення. Наш онлайн-курс надасть вам необхідні знання та практичні поради для ефективного післяпологового періоду.</p>
+									<h3>Основні теми курсу включають:</h3>
 									<div class="in_list">
 										<ul>
-											<li><p>Email is a crucial channel in any marketing.</p></li>
-											<li><p>Curious what to say? How to say it?</p></li>
-											<li><p>Whether you’re kicking off a new ca mpaign.</p></li>
-											<li><p>Habitasse per feugiat aliquam luctus accumsan curae</p></li>
+											<li>Фізичне відновлення: вправи та рекомендації для підтримки тонусу м'язів після пологів.</li>
+											<li>Психологічна підтримка: стресові ситуації та психологічне самопочуття після народження.</li>
+											<li>Правильне харчування: раціон для післяпологового періоду, важливість підтримки організму після вагітності.</li>
+											<li>Важливі аспекти догляду за новонародженим: поради щодо догляду за малюком після народження.</li>
+											<li>Тривалість курсу: 4 тижні.</li>
 										</ul>
 									</div>
-									<p>Streets empty that are usually busy are remarkable and can evoke the sense of historical pictures from before the invention of the motorcar. Other things that are different at the moment will be queues to get into stores and the lines marked out on the floor to show how far apart we should be.</p>
+									<p>Приєднуйтесь до нашого курсу "Післяпологовий період та відновлення" та забезпечте собі якісне відновлення після вагітності.</p>
+									<h3>Ціна курсу: 50 євро</h3>
+									<div class="beny_tm_button color">
+										<a href="img/about/1.jpg" download>
+										<span class="wrapper">
+										<span class="first">Купити</span>
+										<span class="second">Купити</span>
+										</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div> 
@@ -569,20 +583,28 @@
 									<div class="main" data-img-url="img/service/4.jpg"></div>
 								</div>
 								<div class="description">
-									<h3>Ui/Ux Consultancy Breakdown In Cinema 4D</h3>
-									<p>Just because we can't get out and about like we normally would, doesn’t mean we have to taking pictures. There’s still plenty you can do, provided you're prepared to use some imagination. Here are a few ideas to keep you shooting until normal life resumes.</p>
-									<p>Most photographers love to shoot the unusual, and you don’t get much more unusual than These Unprecedented Times. Right now everything counts as out of the ordinary. There are a number of remarkable things about these lockdown days that are worth photographing now we can remember them when it is all over.</p>
-									<h3>What Is Branding?</h3>
-									<p>Nullam blandit constituto eam ne, te nam ignota vituper.atoribus. Malis cetero quem saipe, prou thendrerit voluptaria.</p>
+									<h3>Дієтологія</h3>
+									<p>Наш курс "Дієтологія" допоможе вам отримати глибокі знання про здорове харчування та правильний підбір раціону для різних потреб.</p>
+									<h3>Основні теми курсу:</h3>
 									<div class="in_list">
 										<ul>
-											<li><p>Email is a crucial channel in any marketing.</p></li>
-											<li><p>Curious what to say? How to say it?</p></li>
-											<li><p>Whether you’re kicking off a new ca mpaign.</p></li>
-											<li><p>Habitasse per feugiat aliquam luctus accumsan curae</p></li>
+											<li>Основні принципи збалансованого харчування: вуглеводи, білки, жири, вітаміни та мінерали.</li>
+											<li>Складання індивідуального раціону: підходи до планування харчування для різних вікових груп та фізичних активностей.</li>
+											<li>Дієти для спеціальних випадків: дієтичне харчування при хворобах, алергіях, вагітності та інших станах.</li>
+											<li>Професійні поради щодо здорового способу життя через харчування.</li>
+											<li>Тривалість курсу: 6 тижнів.</li>
 										</ul>
 									</div>
-									<p>Streets empty that are usually busy are remarkable and can evoke the sense of historical pictures from before the invention of the motorcar. Other things that are different at the moment will be queues to get into stores and the lines marked out on the floor to show how far apart we should be.</p>
+									<p>Приєднуйтесь до нашого курсу "Дієтологія" та отримайте комплексні знання про здорове харчування та його вплив на організм.</p>
+									<h3>Ціна курсу: 50 євро</h3>
+									<div class="beny_tm_button color">
+										<a href="img/about/1.jpg" download>
+										<span class="wrapper">
+										<span class="first">Купити</span>
+										<span class="second">Купити</span>
+										</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div> 
