--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 <!--[if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]-->	
 <script src="js/plugins.js"></script>
 <script src="js/init.js"></script>
-<!-- /SCRIPTS-2 -->
+<!-- /SCRIPTS -->
 
 </body>
 </html>
